--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema de compraventa ADSI 2062416",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "type": "module",
   "author": "CAMILO ANDRES ORTIZ RINCON",
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.18"
+    "mongoose": "^5.11.18",
+    "uuid": "^8.3.2"
   }
 }
